Agregado logos, titulo, pagina responsive y footer.

--- a/src/components/layout/body/landing/layout-body-lading-styles.css
+++ b/src/components/layout/body/landing/layout-body-lading-styles.css
@@ -8,13 +8,20 @@
 
 .btn-saber-mas {
     background-color: #377DFF !important;
-    padding: 8px 50px !important;
+    padding: 12px 50px !important;
     box-shadow: 0px 4px 8px rgba(55, 125, 255, 0.5);
     border-radius: 24px !important;
-    width: 195px;
+    width: auto;
     font-style: normal;
     font-weight: 500 !important;
     color: #FFFFFF !important;
+    margin: 1rem 0;
+}
+
+.btn-saber-mas:hover{
+    transition: all .5s ease-out;
+    background-color: #0059ff !important;
+    transform: scale(15);
 }
 
 .circle-container-margin {
@@ -87,4 +94,10 @@
 .circle-blue-second{
     right: 15%;
     top: 50%;
+}
+
+@media (max-width: 995px) {
+    .circle-red{
+        top: 100%;
+    }
 }
