--- a/src/components/layout/body/about-us/layout-body-about-us-styles.css
+++ b/src/components/layout/body/about-us/layout-body-about-us-styles.css
@@ -14,6 +14,7 @@
 
 .our-team-container {
     gap: 50px;
+    display: flex;
 }
 
 .our-team-text {
@@ -48,4 +49,19 @@
     top: 85.5%;
     right: -5%;
     z-index: -1;
+}
+
+@media (max-width: 1390px) {
+    .our-team-container{
+        display: grid;
+    }
+
+    .our-team-container img{
+        margin: auto;
+    }
+
+    .our-team-text{
+        max-width: 75%;
+        text-align: center;
+    }
 }
