--- a/src/components/layout/header/layout-header-styles.css
+++ b/src/components/layout/header/layout-header-styles.css
@@ -2,6 +2,10 @@
     font-size: 18px;
 }
 
+.nav-link{
+    font-size: 18px !important;
+}
+
 .nav-link:hover{
     color: #130024 !important;
     transition: .2s linear;
