--- a/src/components/layout/body/our-services/layout-body-services-styles.css
+++ b/src/components/layout/body/our-services/layout-body-services-styles.css
@@ -29,12 +29,13 @@
 
 .box-service {
     width: 100%;
-    height: 185px;
+    height: 100%;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     margin: 5px;
+    min-width: 220px;
 }
 
 .box-service img{
