--- a/src/components/layout/body/our-services/layout-body-services-styles.css
+++ b/src/components/layout/body/our-services/layout-body-services-styles.css
@@ -30,6 +30,7 @@
 .box-service {
     width: 100%;
     height: 100%;
+    min-height: 168.5px;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.1);
